apps/n8n/n8n-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-lb
  namespace: n8n
  labels:
    app: n8n
spec:
  type: LoadBalancer
  selector:
    app: n8n
  ports:
  - name: http
    port: 80
    targetPort: 5678
    protocol: TCP
