apps/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.223
spec:
  selector:
    app: n8n
  ports:
  - name: http
    port: 5678
    targetPort: 5678
    protocol: TCP
  type: LoadBalancer
